# gfx_basics

./: .clang-format  CMakeLists.txt  README.md
gui_app/: CMakeLists.txt  gui_app.cpp
mygfxlib/: CMakeLists.txt  camera.cpp  camera.h  color.h  model.cpp  model.h  render.cpp  render.h  surface.cpp  surface.h
resource/: CMakeLists.txt
test/: CMakeLists.txt  geometry_test.cpp  model_test.cpp  surface_test.cpp
